# navmap

./: .gitignore  AGENTS.md  README.md  design-qa.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppRail.tsx  MapCanvas.tsx  RoutePanel.tsx
src/config/: mapServices.ts
src/data/: seedRoute.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  zh.json
src/services/: geocoding.ts  location.ts  routing.ts  settings.ts
