[package]
name = "navmap"
version = "0.1.0"
description = "OpenStreetMap-powered desktop navigation"
authors = ["NavMap"]
edition = "2021"

[lib]
name = "navmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "navmap"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", default-features = false, features = ["wry", "common-controls-v6"] }
